Plot estimates on risk ratio scale.

--- a/analysis-complete-case/analysis-other-exploratory-moderators.html
+++ b/analysis-complete-case/analysis-other-exploratory-moderators.html
@@ -667,8 +667,8 @@ the risk ratio scale</h2>
 <pre><code>##                              variable exp_estimates    rrLB95    rrUB95    rrLB90    rrUB90
 ## 1                         (Intercept)     1.0475136 0.9387631 1.1688624 0.9558089 1.1480170
 ## 2                       cig_available     1.1475218 0.9492971 1.3871382 0.9793162 1.3446182
-## 3         (Intercept) + cig_available     1.2020448 1.0115666 1.4283900 1.0406269 1.3885011
-## 4                       cig_available     1.1475218 0.9492971 1.3871382 0.9793162 1.3446182
+## 3                         (Intercept)     1.0475136 0.9387631 1.1688624 0.9558089 1.1480170
+## 4         (Intercept) + cig_available     1.2020448 1.0115666 1.4283900 1.0406269 1.3885011
 ## 5                         (Intercept)     0.8680476 0.5409484 1.3929361 0.5846207 1.2888812
 ## 6                                 age     0.9978061 0.9903703 1.0052978 0.9915872 1.0040641
 ## 7                             is_male     0.9096591 0.6457376 1.2814488 0.6831061 1.2113488
@@ -683,6 +683,10 @@ the risk ratio scale</h2>
 ## 16             any_recent_eligible_dp     0.3660108 0.2303140 0.5816576 0.2485117 0.5390648
 ## 17    engagement_most_recent_eligible     2.3880199 1.7716433 3.2188414 1.8606415 3.0648778
 ## 18                      cig_available     0.9637939 0.7935601 1.1705461 0.8192876 1.1337882</code></pre>
+<pre><code>## png 
+##   2</code></pre>
+<pre><code>## png 
+##   2</code></pre>
 </div>
 </div>
 <div id="negative-affect-self-reported-in-brief-survey" class="section level1" number="8">
@@ -726,8 +730,8 @@ the risk ratio scale</h2>
 <pre><code>##                              variable exp_estimates    rrLB95    rrUB95    rrLB90    rrUB90
 ## 1                         (Intercept)     1.1256056 1.0059563 1.2594862 1.0246882 1.2364620
 ## 2                     negative_affect     0.9815908 0.7739746 1.2448995 0.8047659 1.1972682
-## 3       (Intercept) + negative_affect     1.1048842 0.8805062 1.3864400 0.9139384 1.3357236
-## 4                     negative_affect     0.9815908 0.7739746 1.2448995 0.8047659 1.1972682
+## 3                         (Intercept)     1.1256056 1.0059563 1.2594862 1.0246882 1.2364620
+## 4       (Intercept) + negative_affect     1.1048842 0.8805062 1.3864400 0.9139384 1.3357236
 ## 5                         (Intercept)     0.8462591 0.5308746 1.3490087 0.5731101 1.2495932
 ## 6                                 age     0.9980137 0.9907690 1.0053114 0.9919547 1.0041097
 ## 7                             is_male     0.9131429 0.6559763 1.2711282 0.6925819 1.2039442
@@ -742,6 +746,10 @@ the risk ratio scale</h2>
 ## 16             any_recent_eligible_dp     0.3624190 0.2393717 0.5487178 0.2562394 0.5125969
 ## 17    engagement_most_recent_eligible     2.3882686 1.7778543 3.2082645 1.8661240 3.0565101
 ## 18                    negative_affect     1.0311510 0.8539096 1.2451814 0.8807630 1.2072174</code></pre>
+<pre><code>## png 
+##   2</code></pre>
+<pre><code>## png 
+##   2</code></pre>
 </div>
 </div>
 <div id="cigarette-availability-and-negative-affect-self-reported-in-brief-survey" class="section level1" number="9">
@@ -806,6 +814,10 @@ the risk ratio scale</h2>
 ## 22                                                                      cig_available     0.9437244 0.7676519 1.1601818 0.7941555 1.1214627
 ## 23                                                                    negative_affect     0.9707271 0.7229704 1.3033883 0.7588511 1.2417602
 ## 24                                                 I(cig_available * negative_affect)     1.1396280 0.7526690 1.7255287 0.8057820 1.6117908</code></pre>
+<pre><code>## png 
+##   2</code></pre>
+<pre><code>## png 
+##   2</code></pre>
 </div>
 </div>
 
