Calculate 90% CI's and linear combos of causal parameters.

--- a/analysis-complete-case/analysis-other-exploratory-moderators.html
+++ b/analysis-complete-case/analysis-other-exploratory-moderators.html
@@ -818,6 +818,7 @@ the risk ratio scale</h2>
 ##   2</code></pre>
 <pre><code>## png 
 ##   2</code></pre>
+<pre><code>## [1] TRUE</code></pre>
 </div>
 </div>
 
