--- a/analysis-complete-case/analysis-H2.html
+++ b/analysis-complete-case/analysis-H2.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2024-06-26" />
+<meta name="date" content="2024-10-07" />
 
 <title>MARS MRT: H2 and Exploratory Analyses on Moderated Effect of Time</title>
 
@@ -351,7 +351,7 @@ display: none;
 
 <h1 class="title toc-ignore">MARS MRT: H2 and Exploratory Analyses on
 Moderated Effect of Time</h1>
-<h4 class="date">June 26, 2024</h4>
+<h4 class="date">October 07, 2024</h4>
 
 </div>
 
@@ -462,10 +462,10 @@ the log risk ratio scale</h2>
 <div id="estimated-effect-on-the-risk-ratio-scale" class="section level2" number="1.3">
 <h2><span class="header-section-number">1.3</span> Estimated effect on
 the risk ratio scale</h2>
-<pre><code>##   exp_estimates    rrLB95   rrUB95
-## 1      1.208190 1.0806475 1.350787
-## 2      1.020628 0.9164925 1.136595
-## 3      1.183772 1.0662946 1.314193</code></pre>
+<pre><code>##               exp_estimates    rrLB95   rrUB95
+## High vs. None      1.208190 1.0806475 1.350787
+## Low vs. None       1.020628 0.9164925 1.136595
+## High vs. Low       1.183772 1.0662946 1.314193</code></pre>
 </div>
 <div id="estimated-effect-on-the-risk-difference-scale" class="section level2" number="1.4">
 <h2><span class="header-section-number">1.4</span> Estimated effect on
@@ -768,10 +768,6 @@ the log risk ratio scale</h2>
 <div id="estimated-effect-on-the-risk-ratio-scale-1" class="section level2" number="4.3">
 <h2><span class="header-section-number">4.3</span> Estimated effect on
 the risk ratio scale</h2>
-<pre><code>##   exp_estimates    rrLB95   rrUB95
-## 1      1.253637 1.1169005 1.407113
-## 2      1.057479 0.9585133 1.166662
-## 3      1.185496 1.0741014 1.308443</code></pre>
 </div>
 <div id="estimated-effect-on-the-risk-difference-scale-1" class="section level2" number="4.4">
 <h2><span class="header-section-number">4.4</span> Estimated effect on
